<resources>
    <string name="app_name_basic">Tres en Raya - Reto 4</string>
    <string name="title_basic">Tres en Raya - Consola adaptada</string>
    <string name="turn_human">Tu turno (X)</string>
    <string name="turn_human_2">Turno Jugador 2 (O)</string>
    <string name="turn_computer">Turno de la IA (O)...</string>
    <string name="result_human_win">¡Ganaste! (X)</string>
    <string name="result_human_2_win">¡Jugador 2 ganó! (O)</string>
    <string name="result_computer_win">¡La IA ganó! (O)</string>
    <string name="result_tie">¡Es un empate!</string>
    <string name="restart_game">Reiniciar juego</string>

    <!-- Menu items -->
    <string name="menu_new_game">New Game</string>
    <string name="menu_mode">Game Mode</string>
    <string name="menu_difficulty">Difficulty</string>
    <string name="menu_about">About</string>
    <string name="menu_theme">Temática</string>
    <string name="menu_quit">Quit</string>

    <!-- Theme dialog -->
    <string name="theme_choose">Elige una Temática</string>
    <string name="theme_classic">Clásico (X vs O)</string>
    <string name="theme_coast">Costa (🐚 vs ⭐)</string>
    <string name="theme_llanero">Llano Venezolano (🎶 vs 🪇)</string>
    <string name="theme_cowboy">Vaquero Country (🤠 vs 🐎)</string>

    <!-- Mode dialog -->
    <string name="mode_choose">Choose Game Mode</string>
    <string name="mode_1_player">1 Player (vs AI)</string>
    <string name="mode_2_players">2 Players (Local)</string>

    <!-- Difficulty dialog -->
    <string name="difficulty_choose">Choose a difficulty level</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>

    <!-- Quit dialog -->
    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- About dialog -->
    <string name="about_text">Desarrollado por: Jesús Enrique Flores Riera\n\nAplicación desarrollada como parte del Reto 4. Esta evolución incluye la integración de un menú de opciones (Options Menu), distintos niveles de dificultad mediante una Inteligencia Artificial adaptativa y la implementación interactiva de múltiples cuadros de diálogo (Dialog Boxes).</string>
    <string name="version_info">Multijugador - Reto 4</string>
</resources>