<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/new_game"
        android:title="@string/menu_new_game"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="never" />
    <item android:id="@+id/game_mode"
        android:title="@string/menu_mode"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="never" />
    <item android:id="@+id/ai_difficulty"
        android:title="@string/menu_difficulty"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="never" />
    <item android:id="@+id/theme_selection"
        android:title="@string/menu_theme"
        android:icon="@drawable/ic_theme_palette"
        app:showAsAction="never" />
    <item android:id="@+id/about"
        android:title="@string/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />
</menu>